# fluxbench

./: .gitignore  Cargo.toml  README.md  flux.toml
.github/workflows/: release.yml  test.yml
examples/: async_bench.rs  basic.rs  synthetic.rs  verify.rs
fluxbench/: Cargo.toml
fluxbench-cli/: Cargo.toml
fluxbench-cli/src/: config.rs  executor.rs  lib.rs  main.rs  planner.rs  supervisor.rs
fluxbench-cli/src/executor/: execution.rs  formatting.rs  metadata.rs  report.rs  statistics.rs  verification.rs
fluxbench-core/: Cargo.toml
fluxbench-core/src/: allocator.rs  bencher.rs  lib.rs  measure.rs  worker.rs
fluxbench-ipc/: Cargo.toml
fluxbench-ipc/src/: framing.rs  lib.rs  messages.rs  ring_buffer.rs
fluxbench-logic/: Cargo.toml
fluxbench-logic/src/: context.rs  graph.rs  lib.rs  synthetic.rs  verification.rs
fluxbench-macros/: Cargo.toml
fluxbench-macros/src/: lib.rs
fluxbench-report/: Cargo.toml
fluxbench-report/src/: csv.rs  github.rs  github_action.rs  html.rs  json.rs  lib.rs  report.rs
fluxbench-stats/: Cargo.toml
fluxbench-stats/src/: bootstrap.rs  comparison.rs  lib.rs  outliers.rs  percentiles.rs  summary.rs
fluxbench/examples/: benchmarks.rs
fluxbench/src/: lib.rs
fluxbench/tests/: integration.rs
