[package]
name = "fluxbench-core"
description = "Worker runtime for FluxBench - the Bencher struct, timing, and allocation tracking"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
fluxbench-ipc.workspace = true
serde.workspace = true
thiserror.workspace = true
inventory.workspace = true
tokio.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
