[package]
name = "fluxbench-ipc"
description = "Zero-copy IPC protocol for FluxBench supervisor-worker communication"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rkyv.workspace = true
thiserror.workspace = true
