[package]
name = "fluxbench-logic"
description = "Algebraic verification engine for FluxBench performance assertions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fluxbench-stats.workspace = true
evalexpr.workspace = true
regex.workspace = true
thiserror.workspace = true
fxhash.workspace = true
inventory.workspace = true
serde.workspace = true
