[package]
name = "fluxbench-report"
description = "Reporting and visualization for FluxBench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
fluxbench-stats.workspace = true
fluxbench-logic.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true

# Visualization (our internal crate, commented until available)
# plotr = { path = "../../plotr" }
