[package]
name = "fluxbench-report"
description = "Report generation and visualization for FluxBench: JSON, CSV, HTML, and GitHub Actions output"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
fluxbench-core.workspace = true
fluxbench-stats.workspace = true
fluxbench-logic.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true

