[package]
name = "fluxbench-stats"
description = "Statistical analysis engine for FluxBench with bootstrap resampling and BCa intervals"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
rayon.workspace = true
rand.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx = "0.5"
